action: skopeo-copy

--- a/skopeo-copy/Dockerfile
+++ b/skopeo-copy/Dockerfile
@@ -1,5 +1,9 @@
 FROM alpine:latest
 
-RUN apk add skopeo
+RUN apk add --update \
+    bash skopeo \
+  && rm -rf /var/cache/apk/*
+
+COPY entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
