--- a/huaweicloud-swr-public/action.yml
+++ b/huaweicloud-swr-public/action.yml
@@ -11,6 +11,9 @@ inputs:
   HUAWEI_CLOUD_SDK_SK:
     description: 'HUAWEI_CLOUD_SDK_SK'
     required: true
+  HUAWEI_CLOUD_SWR_REGION:
+    description: 'HUAWEI_CLOUD_SWR_REGION'
+    required: true
   HUAWEI_CLOUD_SWR_NAMESPACE:
     description: 'HUAWEI_CLOUD_SWR_NAMESPACE'
     required: true
